[gd_scene load_steps=11 format=3 uid="uid://yec60pvu8b10"]

[ext_resource type="Script" uid="uid://b8yl5hl4l6deh" path="res://Script/NodeScripts/MapEditorUIScripts/StarEditUI/star_edit_ui.gd" id="1_7s2en"]
[ext_resource type="Texture2D" uid="uid://bryrv3nn37mbm" path="res://UITexture/CreateStarUIs/CreateUI_closeButton.png" id="1_atudw"]
[ext_resource type="Texture2D" uid="uid://do200ud6pxnaj" path="res://UITexture/CreateStarUIs/CreateStarButtonBG.tres" id="2_ocacw"]
[ext_resource type="Texture2D" uid="uid://64r8l66w2ofc" path="res://UITexture/CreateStarUIs/LatelyChosenStarBG.tres" id="3_7s2en"]
[ext_resource type="Texture2D" uid="uid://dmyu1xsgr8y4e" path="res://UITexture/CreateStarUIs/LatelyChosenStarButtonBG.tres" id="4_etxj5"]
[ext_resource type="PackedScene" uid="uid://binldjwnoxwjq" path="res://MapNode/map_node_star.tscn" id="4_evo25"]
[ext_resource type="Script" uid="uid://x68qe30f1s6" path="res://Script/NodeScripts/MapEditorUIScripts/StarEditUI/choose_star_script.gd" id="6_e1dp0"]
[ext_resource type="PackedScene" uid="uid://bflaaarpk23au" path="res://Scenes/UIs/star_information.tscn" id="6_etxj5"]
[ext_resource type="Script" uid="uid://bwvidvptx3asy" path="res://Script/NodeScripts/MapEditorUIScripts/StarEditUI/recently_chosen_stars_script.gd" id="7_ta52b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y1kjg"]
bg_color = Color(0.244717, 0.63956, 0.870175, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.000538102, 0.899817, 1, 1)
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="StarEditUI" type="Control"]
layout_mode = 3
anchor_left = 0.702
anchor_right = 1.007
anchor_bottom = 1.0
offset_left = 0.23999
offset_right = -13.1602
script = ExtResource("1_7s2en")
star_information_scene = ExtResource("6_etxj5")
map_node_star_scene = ExtResource("4_evo25")
metadata/_edit_lock_ = true

[node name="StarEditUIbg" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 560.0
offset_bottom = 1058.0
color = Color(0.356863, 0.356863, 0.356863, 0.572549)

[node name="StarEditUI_closeButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.076
anchor_top = 0.436
anchor_right = -0.076
anchor_bottom = 0.436
offset_left = 2.56006
offset_top = 2.71201
offset_right = 42.5601
offset_bottom = 134.712
icon = ExtResource("1_atudw")
flat = true

[node name="ChooseStar" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.146
anchor_top = 0.045
anchor_right = 0.832
anchor_bottom = 0.28
offset_left = 0.23999
offset_top = 0.389999
offset_right = 0.0799866
offset_bottom = -0.23999
flat = true
script = ExtResource("6_e1dp0")
metadata/_edit_lock_ = true

[node name="ChooseStarButtonBG" type="TextureRect" parent="ChooseStar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_ocacw")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="ChosenStarPicture" type="TextureRect" parent="ChooseStar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.312
anchor_top = 0.194
anchor_right = 0.687
anchor_bottom = 0.774
offset_left = 0.192001
offset_top = -0.112
offset_right = 0.191986
offset_bottom = 0.0479889
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(72, 72)
expand_mode = 1
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="Name_bg" type="Panel" parent="ChooseStar"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.194
offset_bottom = -0.112
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_y1kjg")
metadata/_edit_lock_ = true

[node name="Name" type="Label" parent="ChooseStar/Name_bg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.312466, 0.312466, 0.312466, 1)
theme_override_colors/font_outline_color = Color(0.370364, 0.370364, 0.370364, 1)
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarBar" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.146
anchor_top = 0.34
anchor_right = 0.832
anchor_bottom = 0.423
offset_left = 0.23999
offset_top = 0.279999
offset_right = 0.0799866
offset_bottom = 0.466003
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_ta52b")
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarBG" type="TextureRect" parent="RecentlyChosenStarBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_7s2en")
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarSlots" type="Control" parent="RecentlyChosenStarBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarSlot1" type="Control" parent="RecentlyChosenStarBar/RecentlyChosenStarSlots"]
layout_mode = 1
anchor_left = 0.026
anchor_top = 0.091
anchor_right = 0.214
anchor_bottom = 0.909
offset_left = 0.0159998
offset_top = -0.00799942
offset_right = -0.176003
offset_bottom = 0.00800323
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarPicture" type="TextureRect" parent="RecentlyChosenStarBar/RecentlyChosenStarSlots/RecentlyChosenStarSlot1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(36, 36)
expand_mode = 1
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarButtonBG" type="TextureRect" parent="RecentlyChosenStarBar/RecentlyChosenStarSlots/RecentlyChosenStarSlot1"]
custom_minimum_size = Vector2(55, 77)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
texture = ExtResource("4_etxj5")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarButton" type="Button" parent="RecentlyChosenStarBar/RecentlyChosenStarSlots/RecentlyChosenStarSlot1/RecentlyChosenStarButtonBG"]
custom_minimum_size = Vector2(55, 77)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarSlot2" type="Control" parent="RecentlyChosenStarBar/RecentlyChosenStarSlots"]
layout_mode = 1
anchor_left = 0.216
anchor_top = 0.091
anchor_right = 0.404
anchor_bottom = 0.909
offset_left = 0.0559998
offset_top = -0.00800037
offset_right = -0.136002
offset_bottom = 0.00799561
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarPicture" type="TextureRect" parent="RecentlyChosenStarBar/RecentlyChosenStarSlots/RecentlyChosenStarSlot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(36, 36)
expand_mode = 1
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarButtonBG" type="TextureRect" parent="RecentlyChosenStarBar/RecentlyChosenStarSlots/RecentlyChosenStarSlot2"]
custom_minimum_size = Vector2(55, 77)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
texture = ExtResource("4_etxj5")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarButton" type="Button" parent="RecentlyChosenStarBar/RecentlyChosenStarSlots/RecentlyChosenStarSlot2/RecentlyChosenStarButtonBG"]
custom_minimum_size = Vector2(55, 77)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarSlot3" type="Control" parent="RecentlyChosenStarBar/RecentlyChosenStarSlots"]
layout_mode = 1
anchor_left = 0.406
anchor_top = 0.091
anchor_right = 0.594
anchor_bottom = 0.909
offset_left = 0.095993
offset_top = -0.00800037
offset_right = -0.0960083
offset_bottom = 0.00799561
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarPicture" type="TextureRect" parent="RecentlyChosenStarBar/RecentlyChosenStarSlots/RecentlyChosenStarSlot3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(36, 36)
expand_mode = 1
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarButtonBG" type="TextureRect" parent="RecentlyChosenStarBar/RecentlyChosenStarSlots/RecentlyChosenStarSlot3"]
custom_minimum_size = Vector2(55, 77)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
texture = ExtResource("4_etxj5")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarButton" type="Button" parent="RecentlyChosenStarBar/RecentlyChosenStarSlots/RecentlyChosenStarSlot3/RecentlyChosenStarButtonBG"]
custom_minimum_size = Vector2(55, 77)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarSlot4" type="Control" parent="RecentlyChosenStarBar/RecentlyChosenStarSlots"]
layout_mode = 1
anchor_left = 0.596
anchor_top = 0.091
anchor_right = 0.784
anchor_bottom = 0.909
offset_left = 0.135986
offset_top = -0.00800037
offset_right = -0.0560303
offset_bottom = 0.00799561
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarPicture" type="TextureRect" parent="RecentlyChosenStarBar/RecentlyChosenStarSlots/RecentlyChosenStarSlot4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(36, 36)
expand_mode = 1
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarButtonBG" type="TextureRect" parent="RecentlyChosenStarBar/RecentlyChosenStarSlots/RecentlyChosenStarSlot4"]
custom_minimum_size = Vector2(55, 77)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
texture = ExtResource("4_etxj5")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarButton" type="Button" parent="RecentlyChosenStarBar/RecentlyChosenStarSlots/RecentlyChosenStarSlot4/RecentlyChosenStarButtonBG"]
custom_minimum_size = Vector2(55, 77)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarSlot5" type="Control" parent="RecentlyChosenStarBar/RecentlyChosenStarSlots"]
layout_mode = 1
anchor_left = 0.786
anchor_top = 0.091
anchor_right = 0.974
anchor_bottom = 0.909
offset_left = 0.175995
offset_top = -0.00800037
offset_right = -0.0160217
offset_bottom = 0.00799561
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarPicture" type="TextureRect" parent="RecentlyChosenStarBar/RecentlyChosenStarSlots/RecentlyChosenStarSlot5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(36, 36)
expand_mode = 1
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarButtonBG" type="TextureRect" parent="RecentlyChosenStarBar/RecentlyChosenStarSlots/RecentlyChosenStarSlot5"]
custom_minimum_size = Vector2(55, 77)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
texture = ExtResource("4_etxj5")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="RecentlyChosenStarButton" type="Button" parent="RecentlyChosenStarBar/RecentlyChosenStarSlots/RecentlyChosenStarSlot5/RecentlyChosenStarButtonBG"]
custom_minimum_size = Vector2(55, 77)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
metadata/_edit_lock_ = true

[node name="StarInformation" parent="." instance=ExtResource("6_etxj5")]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 82.0001
offset_top = 464.0
offset_right = 466.0
offset_bottom = 897.0
grow_horizontal = 1
grow_vertical = 1

[node name="CreateStarButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.328
anchor_top = 0.89
anchor_right = 0.328
anchor_bottom = 0.89
offset_left = 28.288
offset_top = -5.62
offset_right = 156.288
offset_bottom = 58.38
theme_override_font_sizes/font_size = 25
text = "生成"

[connection signal="button_up" from="StarEditUI_closeButton" to="." method="_on_star_edit_ui_close_button_button_up"]
[connection signal="button_up" from="ChooseStar" to="ChooseStar" method="_on_choose_star_button_up"]
[connection signal="request_choose_star" from="ChooseStar" to="." method="_on_choose_star_request_choose_star"]
[connection signal="switch_chosen_star" from="RecentlyChosenStarBar" to="." method="_on_recently_chosen_star_bar_switch_chosen_star"]
[connection signal="request_show_ui" from="StarInformation" to="." method="_on_star_information_request_show_ui"]
[connection signal="star_information_changed" from="StarInformation" to="." method="_on_star_information_star_information_changed"]
[connection signal="star_size_changed" from="StarInformation" to="." method="_on_star_information_star_size_changed"]
[connection signal="button_up" from="CreateStarButton" to="." method="_on_create_star_button_button_up"]
